# buildstream

./: .asf.yaml  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  BuildStream.doap  CI.rst  COMMITTERS.rst  CONTRIBUTING.html  CONTRIBUTING.rst  Dockerfile  Dockerfile-build.sh  HACKING.rst  LICENSE  MAINTAINERS  MANIFEST.in  NEWS  NOTICE  README.rst  WINDOWS.md  additional_docker.html  arch_cachekeys.html  arch_caches.html  arch_data_model.html  arch_dependency_model.html  arch_overview.html  arch_program_flow.html  arch_remote_execution.html  arch_sandboxing.html  arch_scheduler.html  buildstream.buildelement.html  buildstream.downloadablefilesource.html  buildstream.element.html  buildstream.exceptions.html  buildstream.html  buildstream.node.html  buildstream.plugin.html  buildstream.sandbox.html  buildstream.sandbox.sandbox.html  (+64 more)
buildstream/: __init__.py  __main__.py  _artifact.py  _artifactcache.py  _artifactelement.py  _basecache.py  _cachekey.py  _context.py  _elementfactory.py  _exceptions.py  _gitsourcebase.py  _hooks.py  _includes.py  _loader.py  _main.py  _manifest.py  _message.py  _metaelement.py  _metasource.py  _mirror.py  _ostree.py  _pipeline.py  _plugin.py  _plugincontext.py  _profile.py  _project.py  _projectrefs.py  _sandboxbwrap.py  _sandboxchroot.py  _scheduler.py  _signals.py  _site.py  _sourcecache.py  _sourcefactory.py  _stream.py  _sysroot_dependency_loader.py  _term.py  _variables.py  _version.py  _versions.py  (+30 more)
buildstream/_artifactcache/: __init__.py  artifactcache.py  cascache.py  casserver.py  meson.build  ostreecache.py  pushreceive.py  tarcache.py
buildstream/_cachekey/: __init__.py  cachekey.py  strictcachekey.py
buildstream/_cachekeycontroller/: __init__.py  artifactelementcachekeycontroller.py  cachekeycontroller.py  nonstrictcachekeycontroller.py  strictcachekeycontroller.py
buildstream/_cas/: __init__.py  cascache.py  casremote.py  casserver.py  transfer.py
buildstream/_frontend/: __init__.py  app.py  cli.py  complete.py  linuxapp.py  main.py  meson.build  profile.py  status.py  widget.py
buildstream/_fuse/: __init__.py  fuse.py  hardlinks.py  meson.build  mount.py
buildstream/_loader/: __init__.py  loadelement.py  loader.py  metaelement.py  metasource.py  types.py
buildstream/_options/: __init__.py  meson.build  option.py  optionarch.py  optionbool.py  optioneltmask.py  optionenum.py  optionflags.py  optionos.py  optionpool.py
buildstream/_platform/: __init__.py  darwin.py  linux.py  meson.build  platform.py  unix.py
buildstream/_scheduler/: __init__.py  artifactfetchqueue.py  buildqueue.py  fetchqueue.py  job.py  meson.build  mirrorqueue.py  pullqueue.py  pushqueue.py  queue.py  queuerunner.py  resources.py  scheduler.py  trackqueue.py
buildstream/data/: bst  build-all.sh.in  build-module.sh.in  defaultconfig.yaml  meson.build  ostree-pull-ssh  ostree-push  projectconfig.yaml  userconfig.yaml
buildstream/plugintestutils/: __init__.py  repo.py  runcli.py
buildstream/sandbox/: Directory.py  __init__.py  _config.py  _filebaseddirectory.py  _mount.py  _mounter.py  _sandboxbuildbox.py  _sandboxbwrap.py  _sandboxchroot.py  _sandboxdummy.py  _sandboxremote.py  _sandboxuserchroot.py  meson.build  sandbox.py
buildstream/storage/: __init__.py  _casbaseddirectory.py  _filebaseddirectory.py  directory.py
buildstream/testing/: __init__.py  integration.py  repo.py  runcli.py
man/: bst-artifact-checkout.1  bst-artifact-delete.1  bst-artifact-list-contents.1  bst-artifact-log.1  bst-artifact-pull.1  bst-artifact-push.1  bst-artifact-receive.1  bst-artifact-server.1  bst-artifact-show.1  bst-artifact.1  bst-build.1  bst-checkout.1  bst-fetch.1  bst-help.1  bst-init.1  bst-pull.1  bst-push.1  bst-shell.1  bst-show.1  bst-source-bundle.1  bst-source-checkout.1  bst-source-fetch.1  bst-source-push.1  bst-source-track.1  bst-source.1  bst-track.1  bst-workspace-close.1  bst-workspace-list.1  bst-workspace-open.1  bst-workspace-reset.1  bst-workspace.1  bst.1  click-man-wrapper  meson.build
tests/: .gitattributes  conftest.py  external_plugins.py  meson.build
tests/artifactcache/: artifactservice.py  basics.py  cache_size.py  capabilities.py  config.py  expiry.py  junctions.py  pull.py  push.py  tar.py
tests/cachekey/: cachekey.py  update.py
tests/completions/: completions.py
tests/context/: context.py
tests/elements/: filter.py
tests/examples/: advanced-junctions.py  alpine-autotools.py  autotools-outofsource.py  autotools.py  cmake.py  developing.py  first-project.py  flatpak-autotools.py  helloworld-outofsource.py  integration-commands.py  junctions.py  out-of-source.py  running-commands.py
tests/format/: assertion.py  dependencies.py  elementnames.py  include.py  include_composition.py  invalid_keys.py  junctions.py  link.py  listdirectiveerrors.py  option-list-directive.py  optionarch.py  optionbool.py  optioneltmask.py  optionenum.py  optionexports.py  optionflags.py  optionos.py  optionoverrides.py  optionprojectroot.py  options.py  project.py  projectoverrides.py  stack.py  substitutions.py  userconfig.py  variables.py
tests/frontend/: __init__.py  artifact.py  artifact_checkout.py  artifact_delete.py  artifact_list_contents.py  artifact_log.py  artifact_pull.py  artifact_show.py  buildcheckout.py  buildtrack.py  completions.py  compose_splits.py  configurable_warnings.py  cross_junction_workspace.py  default_target.py  fetch.py  help.py  init.py  inspect.py  interactive_init.py  large_directory.py  logging.py  main.py  mirror.py  order.py  overlaps.py  progress.py  pull.py  push.py  rebuild.py  remote-caches.py  show.py  show_artifact_cas_digest.py  source_bundle.py  source_checkout.py  track.py  track_cross_junction.py  version.py  workspace.py  yamlcache.py
tests/integration/: artifact.py  autotools.py  build-tree.py  build-uid.py  buildtree.py  cachedfail.py  cmake.py  compose-symlink-order.py  compose-symlinks.py  compose.py  digest-environment.py  filter.py  fmt.py  import.py  interactive_build.py  make.py  manual.py  messages.py  oci.py  pip.py  pip_element.py  pip_source.py  recc.py  (+15 more)
(+2728 files in other folders)
