[build-system]
requires = [
    # We need at least version 36.6.0 that introduced "build_meta"
    "setuptools>=36.6.0",
    # In order to build wheels, and as required by PEP 517
    "wheel",
    "Cython"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
  | src/buildstream/_protos
)
'''

[tool.cibuildwheel]
skip = [
  # BuildStream supports Python >= 3.7
  "cp36-*",
  # PyPy may work, but nobody is testing it so avoid distributing prebuilt binaries.
  "pp*",
  # Skipping this niche archicture ~halves overall build time.
  "*_i686",
  # This one fails to build with "NOTE: Shared object (.so) files found in this project.".
  # possibly https://github.com/pypa/cibuildwheel/issues/901.
  "cp310-musllinux_x86_64",
]
