tests = [
  'tests/artifactcache/tar.py',
  'tests/cachekey/cachekey.py',
  'tests/cachekey/update.py',
  'tests/completions/completions.py',
  'tests/context/context.py',
  'tests/format/assertion.py',
  'tests/format/listdirectiveerrors.py',
  'tests/format/optionarch.py',
  'tests/format/optionbool.py',
  'tests/format/optioneltmask.py',
  'tests/format/optionenum.py',
  'tests/format/optionexports.py',
  'tests/format/optionflags.py',
  'tests/format/options.py',
  'tests/format/projectoverrides.py',
  'tests/format/project.py',
  'tests/frontend/buildcheckout.py',
  'tests/frontend/buildtrack.py',
  'tests/frontend/compose_splits.py',
  'tests/frontend/fetch.py',
  'tests/frontend/help.py',
  'tests/frontend/main.py',
  'tests/frontend/overlaps.py',
  'tests/frontend/pull.py',
  'tests/frontend/push.py',
  'tests/frontend/show.py',
  'tests/frontend/track.py',
  'tests/frontend/version.py',
  'tests/frontend/workspace.py',
  'tests/loader/basics.py',
  'tests/loader/dependencies.py',
  'tests/pipeline/load.py',
  'tests/plugins/basics.py',
  'tests/plugins/pipeline.py',
  'tests/plugins/third_party.py',
  'tests/project/plugins.py',
  'tests/project/project.py',
  'tests/sources/git.py',
  'tests/sources/local.py',
  'tests/sources/patch.py',
  'tests/sources/tar.py',
  'tests/sources/zip.py',
  'tests/testutils/artifactshare.py',
  'tests/testutils/runcli.py',
  'tests/testutils/setuptools.py',
  'tests/testutils/site.py',
  'tests/variables/variables.py',
  'tests/yaml/yaml.py',
]

# This must be run as a single test, otherwise the coverage report that
# it generates at the end will be meaningless.
test('pytest', pytest,
  args: tests,
  workdir: pytest_workdir,
  timeout: 1200)
