sources = [
    '__init__.py',
    'autotools.py',
    'autotools.yaml',
    'cmake.py',
    'cmake.yaml',
    'compose.py',
    'compose.yaml',
    'distutils.py',
    'distutils.yaml',
    'import.py',
    'import.yaml',
    'makemaker.py',
    'makemaker.yaml',
    'manual.py',
    'manual.yaml',
    'meson.py',
    'meson.yaml',
    'modulebuild.py',
    'modulebuild.yaml',
    'pip.py',
    'pip.yaml',
    'qmake.py',
    'qmake.yaml',
    'script.py',
    'script.yaml',
    'stack.py',
]

install_data(sources,
    install_dir: join_paths(python_site_packages_dir, 'buildstream', 'plugins', 'elements'))
