sources = [
    '__init__.py',
    'bzr.py',
    '_downloadablefilesource.py',
    'git.py',
    'local.py',
    'meson.build',
    'ostree.py',
    'patch.py',
    'tar.py',
    'zip.py',
]

install_data(sources,
    install_dir: join_paths(python_site_packages_dir, 'buildstream', 'plugins', 'sources'))
